---------------------------------------------------------------------------------------------------
Version: 0.12.7
Date: ????
  Features:
---------------------------------------------------------------------------------------------------
Version: 0.12.6
Date: 2023-03-20
  Bugfixes:
    - [gui-lite] Fixed that drag_target was not restored to GUI elem definitions after being used in gui.add
---------------------------------------------------------------------------------------------------
Version: 0.12.5
Date: 2023-03-09
  Features:
    - `dictionary-lite` and `gui-lite` modules are now compatible with the core `event_handler`
  Bugfixes:
    - [bounding-box] Fixed `bounding_box.from_dimensions()` returning a 0x0 area at left_top (#49)
    - Fixed `selected` button styles having an extra vertical offset when clicked
---------------------------------------------------------------------------------------------------
Version: 0.12.4
Date: 2022-12-30
  Changes:
    - flib_selected_frame_action_button and flib_selected_tool_button styles now have a vertical offset
    - Improved slot style coloring to be more consistent
    - Updated table module to use more generics for callback return values
  Bugfixes:
    - Fixed missing clicked graphical sets on slot styles
    - Fixed missing return types in table module callback functions
    - Fixed that long mod names would cut off in the dictionary-lite progress window
---------------------------------------------------------------------------------------------------
Version: 0.12.3
Date: 2022-12-14
  Bugfixes:
    - Fixed a crash when calling `bounding_box.rotate()`
    - The base mod dependency is no longer optional - it was causing the game to download flib versions that it could not run
---------------------------------------------------------------------------------------------------
Version: 0.12.2
Date: 2022-12-06
  Changes:
    - [queue] If the queue is empty, returns nil instead of throwing an error